--- a/templates/courses/addCourses.html
+++ b/templates/courses/addCourses.html
@@ -303,6 +303,19 @@
     </div>
     {% endfor %}
     {% endif %}
+
+    <!-- {% if messages %}
+    {% for k in messages%}
+    <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
+        <b>{{ k }} !</b>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+    {% endif %} -->
+
+
     <br>
     <br>
     <div class="d-flex justify-content-center h-100">
