--- a/templates/courses/editTeachingType.html
+++ b/templates/courses/editTeachingType.html
@@ -183,7 +183,7 @@
 	}
 </style>
 {% endblock %}
-{% block body %}
+{% block main-content %}
 <div class="container1">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
