--- a/templates/batches/editBatchTutor.html
+++ b/templates/batches/editBatchTutor.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/dashboardTutor.html' %}
 {% load static %}
+{% load datesplit %}
 {% block css %}
 <style>
     @import url('https://fonts.googleapis.com/css?family=Numans');
