--- a/templates/batches/postNotice.html
+++ b/templates/batches/postNotice.html
@@ -114,7 +114,7 @@
 </style>
 {% endblock %}
 {% block main-content %}
-<div class="mt-5">
+<div class="container">
 	{% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
@@ -125,10 +125,11 @@
     </div>
     {% endfor %}
     {% endif %}
+	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header">
 				<div class="row">
-					<div class="col-sm-10"><h2 style="color: rgb(66, 8, 8);">Add Notice</h2></div>
+					<div class="col-sm-10"><h2 style="color: rgb(66, 8, 8);">Add Tuition</h2></div>
 				</div>
 			</div>
 			<div class="card-body container">
@@ -172,5 +173,6 @@
 				</form>
 			</div>
 		</div>
+	</div>
 </div>
 {% endblock %}
