--- a/templates/courses/viewteachType.html
+++ b/templates/courses/viewteachType.html
@@ -3,216 +3,216 @@
 {% block css %}
 
 .darken-grey-text {
-    color: #2E2E2E;
+color: #2E2E2E;
 }
 .input-group.md-form.form-sm.form-2 input {
-    border: 1px solid #bdbdbd;
-    border-top-left-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
+border: 1px solid #bdbdbd;
+border-top-left-radius: 0.25rem;
+border-bottom-left-radius: 0.25rem;
 }
 .input-group.md-form.form-sm.form-2 input.purple-border {
-    border: 1px solid #9e9e9e;
+border: 1px solid #9e9e9e;
 }
 .input-group.md-form.form-sm.form-2 input[type=text]:focus:not([readonly]).purple-border {
-    border: 1px solid #ba68c8;
-    box-shadow: none;
+border: 1px solid #ba68c8;
+box-shadow: none;
 }
 .form-2 .input-group-addon {
-    border: 1px solid #ba68c8;
+border: 1px solid #ba68c8;
 }
 .danger-text {
-    color: #ff3547;
+color: #ff3547;
 }
 .success-text {
-    color: #00C851;
+color: #00C851;
 }
 .table-bordered.red-border, .table-bordered.red-border th, .table-bordered.red-border td {
-    border: 1px solid #ff3547!important;
+border: 1px solid #ff3547!important;
 }
 .table.table-bordered th {
-    text-align: center;
+text-align: center;
 }
 .bigcheckbox{
-    width: 25px;
-    height: 25px;
+width: 25px;
+height: 25px;
 }
 .arcinput {
-    background-color:transparent;
-    border: 0;
+background-color:transparent;
+border: 0;
 }
 .container{
-    max-width:1250px;
-    width:100%;
-  }
-  .color-pattern-3 {
-    text-align: center;
+max-width:1250px;
+width:100%;
+}
+.color-pattern-3 {
+text-align: center;
 }
 
 /* General button style (reset) */
 .button {
-    border: none;
-    font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    background: none;
-    cursor: pointer;
-    width: 350px;
-    padding: 25px 50px;
-    display: inline-block;
-    margin: 4px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 700;
-    outline: none;
-    position: relative;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
+border: none;
+font-family: inherit;
+font-size: inherit;
+color: inherit;
+background: none;
+cursor: pointer;
+width: 350px;
+padding: 25px 50px;
+display: inline-block;
+margin: 4px;
+text-transform: uppercase;
+letter-spacing: 1px;
+font-weight: 700;
+outline: none;
+position: relative;
+-webkit-transition: all 0.3s;
+-moz-transition: all 0.3s;
+transition: all 0.3s;
 }
 .button:after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
+content: '';
+position: absolute;
+z-index: -1;
+-webkit-transition: all 0.3s;
+-moz-transition: all 0.3s;
+transition: all 0.3s;
 }
 
 /* Button 3 */
 .button-3 {
-    background: #fcad26;
-    color: #fff;
+background: #fcad26;
+color: #fff;
 }
 .button-3:hover {
-    background: #f29e0d;
+background: #f29e0d;
 }
 .button-3:active {
-    background: #f58500;
-    top: 2px;
+background: #f58500;
+top: 2px;
 }
 .button-3>.fa {
-    position: absolute;
-    height: 100%;
-    left: 0;
-    top: 0;
-    font-size: 140%;
-    width: 60px;
+position: absolute;
+height: 100%;
+left: 0;
+top: 0;
+font-size: 140%;
+width: 60px;
 }
 .button-3>.fa:before {
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+position: absolute;
+width: 25px;
+height: 25px;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+margin: auto;
 }
 /* Button 3a */
 .button-3a {
-    padding: 25px 60px 25px 120px;
+padding: 25px 60px 25px 120px;
 }
 .button-3a>.fa {
-    background: rgba(0, 0, 0, 0.05);
+background: rgba(0, 0, 0, 0.05);
 }
 /* Button 3b */
 .button-3b {
-    padding: 25px 60px 25px 120px;
-    border-radius: 10px;
+padding: 25px 60px 25px 120px;
+border-radius: 10px;
 }
 .button-3b>.fa {
-    border-right: 2px solid rgba(255, 255, 255, 0.75);
+border-right: 2px solid rgba(255, 255, 255, 0.75);
 }
 /* Button 3c */
 .button-3c {
-    padding: 80px 20px 20px 20px;
-    border-radius: 10px;
-    box-shadow: 0 3px #da9622;
+padding: 80px 20px 20px 20px;
+border-radius: 10px;
+box-shadow: 0 3px #da9622;
 }
 .button-3c>.fa:before {
-    position: static;
+position: static;
 }
 .button-3c:active {
-    box-shadow: 0 3px #dc7801;
+box-shadow: 0 3px #dc7801;
 }
 .button-3c>.fa {
-    height: 60px;
-    width: 100%;
-    line-height: 60px;
-    background: #fff;
-    color: #f29e0d;
-    border-radius: 10px 10px 0 0;
+height: 60px;
+width: 100%;
+line-height: 60px;
+background: #fff;
+color: #f29e0d;
+border-radius: 10px 10px 0 0;
 }
 .button-3c:active:before {
-    color: #f58500;
+color: #f58500;
 }
 /* Button 3d */
 .button-3d {
-    padding: 25px 60px 25px 120px;
-    border-radius: 10px;
+padding: 25px 60px 25px 120px;
+border-radius: 10px;
 }
 .button-3d>.fa {
-    background: #fff;
-    color: #fcad26;
-    z-index: 2;
-    border-radius: 10px 0 0 10px;
+background: #fff;
+color: #fcad26;
+z-index: 2;
+border-radius: 10px 0 0 10px;
 }
 .button-3d:after {
-    width: 20px;
-    height: 20px;
-    background: #fff;
-    z-index: 1;
-    left: 55px;
-    top: 50%;
-    margin: -10px 0 0 -10px;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+width: 20px;
+height: 20px;
+background: #fff;
+z-index: 1;
+left: 55px;
+top: 50%;
+margin: -10px 0 0 -10px;
+-webkit-transform: rotate(45deg);
+-moz-transform: rotate(45deg);
+-ms-transform: rotate(45deg);
+transform: rotate(45deg);
 }
 .button-3d:active:before {
-    color: #f58500;
+color: #f58500;
 }
 .button-3d:active {
-    top: 0;
+top: 0;
 }
 .button-3d:active:after {
-    left: 60px;
+left: 60px;
 }
 /* Button 3e */
 .button-3e {
-    padding: 25px 120px 25px 60px;
-    overflow: hidden;
+padding: 25px 120px 25px 60px;
+overflow: hidden;
 }
 .button-3e>.fa {
-    left: auto;
-    right: 10px;
-    z-index: 2;
+left: auto;
+right: 10px;
+z-index: 2;
 }
 .button-3e:after {
-    width: 30%;
-    height: 200%;
-    background: rgba(255, 255, 255, 0.1);
-    z-index: 1;
-    right: 0;
-    top: 0;
-    margin: -5px 0 0 -5px;
-    -webkit-transform-origin: 0 0;
-    -webkit-transform: rotate(-20deg);
-    -moz-transform-origin: 0 0;
-    -moz-transform: rotate(-20deg);
-    -ms-transform-origin: 0 0;
-    -ms-transform: rotate(-20deg);
-    transform-origin: 0 0;
-    transform: rotate(-20deg);
+width: 30%;
+height: 200%;
+background: rgba(255, 255, 255, 0.1);
+z-index: 1;
+right: 0;
+top: 0;
+margin: -5px 0 0 -5px;
+-webkit-transform-origin: 0 0;
+-webkit-transform: rotate(-20deg);
+-moz-transform-origin: 0 0;
+-moz-transform: rotate(-20deg);
+-ms-transform-origin: 0 0;
+-ms-transform: rotate(-20deg);
+transform-origin: 0 0;
+transform: rotate(-20deg);
 }
 .button-3e:hover:after {
-    width: 35%;
+width: 35%;
 }
 {% endblock %}
-{% block body %}
+{% block main-content %}
 <main>
-{% if messages %}
+    {% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
         <b>{{ k }} !</b>
@@ -229,10 +229,12 @@
                 <div class="row">
                     <!-- Grid column -->
                     <div class="col-md-8">
-                        <h2 class="pt-3 pb-4 text-center font-bold font-up deep-purple-text" style="color: rgb(66, 8, 8);">Courses with Teaching Type</h2>
+                        <h2 class="pt-3 pb-4 text-center font-bold font-up deep-purple-text"
+                            style="color: rgb(66, 8, 8);">Courses with Teaching Type</h2>
                     </div>
                     <div class="col-md-4">
-                        <input id="searchbox" type="text" class="form-control" name='srh' placeholder="Enter Course Name or Teaching Type" required>
+                        <input id="searchbox" type="text" class="form-control" name='srh'
+                            placeholder="Enter Course Name or Teaching Type" required>
                     </div>
                     <!-- Grid column -->
                 </div>
@@ -253,19 +255,20 @@
                         </thead>
                         <!--Table head-->
                         <!--Table body-->
-                            <tbody>
-                                {% for i in teach %}
-                                    <tr class="tr">
-                                        <td>{{i.course.courseName}} </td>
-                                        <td>{{i.forclass}} </td>
-                                        <td>{{i.teachType|linebreaksbr}} </td>
-                                        <td>{{i.duration|linebreaksbr}} </td>
-                                        <td>{{i.timePeriod|linebreaksbr}}</td>
-                                        <td><a href="{% url 'editTeachingType' i.id %}" class="btn btn-danger">EDIT</a>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
+                        <tbody>
+                            {% for i in teach %}
+                            <tr class="tr">
+                                <td>{{i.course.courseName}} </td>
+                                <td>{{i.forclass}} </td>
+                                <td>online</td>
+                                <!-- <td>{{i.teachType|linebreaksbr}} </td> -->
+                                <td>{{i.duration|linebreaksbr}} </td>
+                                <td>{{i.timePeriod|linebreaksbr}}</td>
+                                <td><a href="{% url 'editTeachingType' i.id %}" class="btn btn-danger">EDIT</a>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
                         <!--Table body-->
                     </table>
                     <!--Table-->
@@ -275,29 +278,29 @@
         </div>
         <script type="text/javascript">
             trlist = $("tbody>tr");
-            $("body").on('input',"#searchbox",function(){
+            $("body").on('input', "#searchbox", function () {
                 trlist.hide();
                 search = this.value.toLowerCase();
                 len = search.length;
-                for(i=0;i<trlist.length;i++){
-                  if(trlist[i].children[0].textContent==""){
-                    cont = cont;
-                  }
-                  else{
-                      cont = trlist[i].children[0].textContent.toLowerCase();
-                  }
-                    if(cont.search(search)!=-1){
-                      $(trlist[i]).show();
+                for (i = 0; i < trlist.length; i++) {
+                    if (trlist[i].children[0].textContent == "") {
+                        cont = cont;
                     }
-                if(trlist[i].children[2].textContent==""){
-                  cont2 = cont2;
-                }
-                else{
-                    cont2 = trlist[i].children[2].textContent.toLowerCase();
-                }
-                  if(cont2.search(search)!=-1){
-                    $(trlist[i]).show();
-                  }
+                    else {
+                        cont = trlist[i].children[0].textContent.toLowerCase();
+                    }
+                    if (cont.search(search) != -1) {
+                        $(trlist[i]).show();
+                    }
+                    if (trlist[i].children[2].textContent == "") {
+                        cont2 = cont2;
+                    }
+                    else {
+                        cont2 = trlist[i].children[2].textContent.toLowerCase();
+                    }
+                    if (cont2.search(search) != -1) {
+                        $(trlist[i]).show();
+                    }
                 }
 
             });
